--- a/styles.css
+++ b/styles.css
@@ -1,84 +1,107 @@
-.text_box {
+.output {
   border: 2px solid white;
-  width: 300px;
-  border-radius: 5px;
-  background-color: white;
+  width: 100%;
+  background-color: #ffffff;
 }
 
-body{
-    width:260px;
-    height: 10em;
-    left: 0px;
-    top: 0px;
-    background: #2C2C2C;
-    }
+body {
+  background: #2C2C2C;
+}
 
-p {
-    text-align: center;
-    font-family: system-ui;
-    font-style: normal;
-    font-size: 0.7em;
-    color:white;
+.text {
+  text-align: center;
+  font-family: system-ui;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.15em;
+  line-height: 1;
+  text-align: left;
+  color:white;
+  margin: auto;
+}
+
+.version {
+  font-family: system-ui;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 0.8em;
+  line-height: 1;
+  text-align: left;
+  color:white;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  padding: 5px
+}
+
+div.solid {
+  border-style: solid;
+}
+output.inset {
+  border-style: inset;
 }
 
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 70px;
-    height: 34px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgb(230, 3, 3);
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: rgb(1, 202, 1);
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(36px);
-    -ms-transform: translateX(36px);
-    transform: translateX(36px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
+  position: relative;
+  display: inline-block;
+  width: 70px;
+  height: 32px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(230, 3, 3);
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 24px;
+  width: 24px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: rgb(1, 202, 1);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(38px);
+  -ms-transform: translateX(38px);
+  transform: translateX(38px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
