--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,63 @@
-.output {
-  border: 2px solid white;
-  width: 100%;
-  background-color: #ffffff;
-}
-
 body {
   background: #2C2C2C;
+  width: 280px;
+}
+
+textarea {
+  resize: none;
+}
+
+.button {
+  padding:5px;
+}
+
+#user_input{
+	overflow: auto;
+	overflow-x: hidden;
+}
+#user_input::-webkit-scrollbar-track{
+	background-color: rgb(190, 190, 190);
+}
+#user_input::-webkit-scrollbar{
+	width: 4px;
+	background-color: #F5F5F5;
+}
+#user_input::-webkit-scrollbar-thumb{
+	background-color: #2C2C2C;
+}
+#out{
+	overflow: auto;
+	overflow-x: hidden;
+}
+#out::-webkit-scrollbar-track{
+	background-color: rgb(190, 190, 190);
+}
+#out::-webkit-scrollbar{
+	width: 4px;
+	background-color: #F5F5F5;
+}
+#out::-webkit-scrollbar-thumb{
+	background-color: #2C2C2C;
 }
 
 .text {
-  text-align: center;
+  text-align: left;
   font-family: system-ui;
   font-style: normal;
   font-weight: bold;
-  font-size: 1.15em;
+  font-size: 1.3em;
   line-height: 1;
-  text-align: left;
   color:white;
   margin: auto;
 }
 
 .version {
+  text-align: left;
   font-family: system-ui;
   font-style: normal;
   font-weight: normal;
-  font-size: 0.8em;
+  font-size: 0.7em;
   line-height: 1;
-  text-align: left;
   color:white;
 }
 
@@ -38,9 +69,6 @@ body {
 
 div.solid {
   border-style: solid;
-}
-output.inset {
-  border-style: inset;
 }
 
 .switch {
