--- a/styles.css
+++ b/styles.css
@@ -1,135 +1,13 @@
-body {
-  background: #2C2C2C;
-  width: 280px;
+#text_display {
+  width: 250px;
+  height: 150px;
+  resize: both;
+  overflow: auto;
 }
 
-textarea {
-  resize: none;
+#decision_display {
+  width: 250px;
+  height: 50px;
+  resize: both;
+  overflow: auto;
 }
-
-.button {
-  padding:5px;
-}
-
-#user_input{
-	overflow: auto;
-	overflow-x: hidden;
-}
-#user_input::-webkit-scrollbar-track{
-	background-color: rgb(190, 190, 190);
-}
-#user_input::-webkit-scrollbar{
-	width: 4px;
-	background-color: #F5F5F5;
-}
-#user_input::-webkit-scrollbar-thumb{
-	background-color: #2C2C2C;
-}
-#out{
-	overflow: auto;
-	overflow-x: hidden;
-}
-#out::-webkit-scrollbar-track{
-	background-color: rgb(190, 190, 190);
-}
-#out::-webkit-scrollbar{
-	width: 4px;
-	background-color: #F5F5F5;
-}
-#out::-webkit-scrollbar-thumb{
-	background-color: #2C2C2C;
-}
-
-.text {
-  text-align: left;
-  font-family: system-ui;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 1.3em;
-  line-height: 1;
-  color:white;
-  margin: auto;
-}
-
-.version {
-  text-align: left;
-  font-family: system-ui;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 0.7em;
-  line-height: 1;
-  color:white;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  padding: 5px
-}
-
-div.solid {
-  border-style: solid;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 70px;
-  height: 32px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgb(230, 3, 3);
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 24px;
-  width: 24px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: rgb(1, 202, 1);
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(38px);
-  -ms-transform: translateX(38px);
-  transform: translateX(38px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
