--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,33 @@ body {
   background: #2C2C2C;
 }
 
-#text_display {
-  width: 250px;
-  height: 150px;
-  resize: both;
-  overflow: auto;
+.text {
+  text-align: left;
+  font-family: system-ui;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.3em;
+  line-height: 1;
+  color:white;
+  margin: auto;
 }
 
-#decision_display {
-  width: 250px;
-  height: 50px;
-  resize: both;
-  overflow: auto;
+.version {
+  text-align: left;
+  font-family: system-ui;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 0.7em;
+  line-height: 1;
+  color:white;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  padding: 5px
+}
 
+button {
+  margin:5px;
+}
