Changes 7.0 > Fixed issue with context menu selection from persisting in the text area > Fixed input area to submit upon clicking button > Added conditions for when there's a valid input or not > Added analysis and clear conditions for the text areas
Issues
> Cannot detect output value from cloudservice.js, value cannot be found
> Extension popup upon selection from context menu has not yet implemented
> Show output upon analysis and hide when cleared has not yet implemented

--- a/textareaStyle.css
+++ b/textareaStyle.css
@@ -1,4 +1,4 @@
-#text_display{
+#input_text{
 	width: 250px;
     height: 150px;
     resize: none;
@@ -6,16 +6,16 @@
 	overflow-x: hidden;
 }
 
-#text_display::-webkit-scrollbar-track{
+#input_text::-webkit-scrollbar-track{
 	background-color: rgb(190, 190, 190);
 }
 
-#text_display::-webkit-scrollbar{
+#input_text::-webkit-scrollbar{
 	width: 4px;
 	background-color: #F5F5F5;
 }
 
-#text_display::-webkit-scrollbar-thumb{
+#input_text::-webkit-scrollbar-thumb{
 	background-color: #2C2C2C;
 }
 
