--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,33 @@
 body {
-  background: #2c2c2c;
+  background-image: url("images/background.jpg");
+  background-color: #2c2c2c;
+  background-size: cover;
 }
 
 .text {
   text-align: left;
-  font-family: system-ui;
   font-style: normal;
-  font-weight: bold;
   font-size: 1.3em;
   line-height: 1;
   color:white;
   margin: auto;
 }
 
+.title {
+  font-family: Impact;
+  font-size: 0.95em;
+}
+
 .version {
-  text-align: left;
-  font-family: system-ui;
-  font-style: normal;
   font-weight: normal;
-  font-size: 0.7em;
-  line-height: 1;
-  color:white;
+  font-size:  0.5em;
+  line-height: 0.5;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  padding: 5px
+  grid-template-columns: 3fr 1fr;
+  padding-bottom: 5px;
 }
 
 button {
