--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   background-image: url("images/background.jpg");
   background-color: #2c2c2c;
-  background-size: cover;
+  background-size: 125%;
 }
 
 .text {
